policy/testdata/k8s/config.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

name: k8s
extensions:
  - name: "strings"
    version: 2
variables:
  - name: "resource.labels"
    type:
      type_name: "map"
      params:
        - type_name: "string"
        - type_name: "string"
  - name: "resource.containers"
    type:
      type_name: "list"
      params:
        - type_name: "string"
  - name: "resource.namespace"
    type:
      type_name: "string"
