policy/testdata/k8s/policy.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

name: k8s
kind: ValidatingAdmissionPolicy
metadata:
  name: "policy.cel.dev"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   ["services"]
      apiVersions: ["v3"]
      operations:  ["CREATE", "UPDATE"]
  variables:
  - name: env
    expression: "resource.labels.?environment.orValue('prod')"
  - name: break_glass
    expression: "resource.labels.?break_glass.orValue('false') == 'true'"
  validations:
  - expression: >
      variables.break_glass ||
        resource.containers.all(c, c.startsWith(variables.env + '.'))
    messageExpression: >
      'only %s containers are allowed in namespace %s'
        .format([variables.env, resource.namespace])
