policy/testdata/k8s/tests.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

description: K8s admission control tests
section:
  - name: "invalid"
    tests:
      - name: "restricted_container"
        input:
          resource.namespace: 
            value: "dev.cel"
          resource.labels:
            value:
              environment: "staging"
          resource.containers:
            value:
              - staging.dev.cel.container1
              - staging.dev.cel.container2
              - preprod.dev.cel.container3
        output: "'only staging containers are allowed in namespace dev.cel'"
